assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Karla&family=Merriweather&display=swap');

*{
    padding:0;
    border:0;
    margin:0;
    
    
}

body{
    font-family: merriweather;
    font-weight:300;

}

#logo{
    float:left;
    font-size: 200%;
    margin-left: 30px;
    color: #347c68;
    padding:20px;
    height:50px;
    
}

/* navigation links */
#menu {
    font-size: 120%;
    letter-spacing: 4px;
}
    

#menu li {
    list-style:none;
    float:right;
    margin-right: 30px;
}

#menu a {
    color: #347c68;
    text-decoration: none;
}

#menu a:hover {
    border-bottom: 1px solid #347c68;
}


.active {
    border-bottom: 1px solid #347c68;
}

#menu, logo{
line-height: 75px;
}

/* hero image */

#hero-outer{
    height:600px;
    width:100%;
    overflow: hidden;
    position: relative;
}


#hero-image {
    background: url('../images/hero-image.jpg') center center no-repeat;
    height: 600px;
    width:100%;
}

#welcome {
   position:absolute;
   top:50%;
   left:50%;
   transform: translate(-50%, -50%);
    text-align: center;
    font-size: 125%;
    background-color:rgba(240,180,150,.8);
    padding:20px;
    color:white;
    border:2px solid white;
    border-radius: 2px;
    text-transform: uppercase;
    letter-spacing:5px; 
}

/* about section */

#about {
    display: flex;
    flex-direction: row-reverse;
    flex-wrap:nowrap;
    margin:60px 30px 60px 30px; 
}

#right-about {
    flex-basis: 50%;
    padding-right: 30px;
    color:#347c68;
    line-height: 40px;
    font-size:120%;
    padding-left:30px;
}

#left-about {
    padding-right:30px;
}

#right-about > p {
    padding:20px 20px 0 0;
}

/* Events */

#events >div {
   text-align: center;
   margin-left: 30px;
   margin-right: 30px;
   margin-bottom: 30px;
   color:white;
   padding:30px 10px 30px 10px;
   box-sizing: border-box;
   border:2px solid white;
   border-radius: 2px;
 
}

#events-outer {
    display:flex;
    flex-direction:row;
    flex-wrap:wrap;
    justify-content: center;
    gap:75px; 
}

#events >h2 {
    color:#347c68;
    font-size:180%;
    text-align: center; 
}

.date {
    font-size:120%;
    padding:20px;
}

.activity  {
    font-size:150%;
    padding:0px 20px;
}

#event-1-outer {
    background: url('../images/garden-exhibition.JPG') center center no-repeat;
    background-size: cover;
    height:300px;
    width:375px;
}

#event-2-outer {
    background: url('../images/earth-day.JPG') center center no-repeat;
    background-size: cover;
    height:300px;
    width:375px;
}

#event-3-outer {
    background: url('../images/grow-with-us.JPG') center center no-repeat;
    background-size: cover;
    height:300px;
    width:375px;
}

#event-4-outer {
    background: url('../images/coffee-morning.JPG') center center no-repeat;
    background-size: cover;
    height:300px;
    width:375px;
   
}
#event-1, #event-2, #event-3, #event-4 {
    background-color: rgba(240,180,150);
    height:150px;
    width:175px;
    position:relative;
   top:10%;
   right:10%;
}

    

/* footer */

footer{
    height:150px;
    margin-top: 25px;
    margin-bottom: 25px;
    display: flex;
    flex-direction:row;
    flex-wrap:nowrap;
    justify-content: center;
    align-items: center;
    gap:30px;
  
   
}


.contact-details {
    color:#347c68;
    flex-basis: 50%;
}

.social-media {
    flex-basis: 50%;
 
}

.contact-details li{
    list-style:none;
    text-align: right;
}

.contact-details h2 {
    line-height: 75px;
}

.social-media li {
    list-style:none;
    display:inline;
    padding:30px;
    
}
.social-media i {  
     font-size: 200%;
    color:#347c68;
   
}



/* contact form */


.contact-section {
    clear:left;
    background: url('../images/contact-us.jpg') center center no-repeat; 
    height: 600px;
    color:white;
    background-size:cover;
    background-position: center;
   
}

.contact-form{
    position:relative; 
   top:50%;
   left:30%;
   transform: translate(-50%, -50%);
    height:500px;
    width:500px;
    text-align: left;
    background-color: rgba(240,180,150, 0.9);
    padding:20px;
    color:white;
    border:2px solid white;  
}

.contact-form > h2 {
    margin-bottom: 20px;
}

.text-input {
    width:100%;
    height:25px;
    margin-bottom:10px;
    background: transparent;
    border:2px solid white;
    color:white;
    font-size: 16px;
   
}

.text-input-message {
    width:100%;
    height:150px;
    background: transparent;
    border:2px solid white;
    color:white;
    font-size: 16px;

}


.submit {
    padding:10px;
    margin-top:10px;
    font-size: 110%;
    font-weight: 500;
}

.submit:hover{
    background-color: white;
    color: rgba(240,180,150,0.7);
}


.sign-up {
padding:10px;
}



/* attractions */

#title {
    clear:left;
    text-align: center;
    padding:30px;
    color:#347c68;
    font-size: 180%;
   
}

.attractions-outer {
    display:grid;
    grid-template-columns:600px 600px;
    grid-template-rows: 400px 400px 400px 400px;
    justify-content: center;
   
    
}

.attractions-outer img {
    max-width: 600px;
    height:400px;
    
}

.attractions-outer > div {
    box-shadow: grey 0px 0px 4px;
    border-radius: 3px;
}

.attractions-outer  h3 {
    text-align: center;
    color:#347c68;
    line-height: 20px;
    font-size:120%;
    padding-top:20px;
}

.attractions-outer  p {
    text-align: left;
    color:#347c68;
    line-height: 30px;
    font-size:110%;
    padding:20px 20px 0 20px;
}


.right-text  h3 {
    line-height: 50px;
}

.left-text  h3 {
    line-height: 50px;
}


.left-image {
    float:left;
    width:50%;
         
}


.left-image  img {
    width: auto;
    height:400px;
    max-height: 100%;
    max-width: 600px;
  
}

.left-text {
    float:left;
    width:40%;
    padding:20px;
    text-align: left;
    margin-left:60px;
    color:#347c68;
    line-height: 30px;
    font-size:120%;

}

.right-image {
    float:right;
}

.right-image img {
    width: auto;
    height:400px;
    max-height: 100%;
    max-width: 600px;

} 

/* media queries for screens 1220px and down */

@media screen and (max-width:1220px)

{

#about {
    flex-direction: column;

}
#left-about, #right-about {
    padding:20px;
    align-self: center;
}

#right-about>h2{
    text-align: center;
}


.attractions-outer  {
    display:grid;
    grid-template-columns:600px;
    grid-template-rows: 400px 400px 400px 400px;
    justify-content: center;
}

.item-1 {
    grid-row: 2
}
.item-2 {
    grid-column: 1;
    
}
.item-3 {
    grid-row:3
}

.item-4 {
    grid-row:4
}

.item-5 {
    grid-row:6
}

.item-6 {
    grid-row:5
}

.item-7 {
    grid-row:7
}

.item-8 {
    grid-row:8
}


}


/* media queries for screens 800px and down */

@media screen and (max-width:800px)
{
.contact-form {
    width:300px;
    height:auto;
    left:50%;
}

#menu{
    clear:left;
    float:left;
    line-height: 30px;
    margin-left: 10px;
}

footer{
    flex-wrap: wrap;
  
}
.contact-details li{
    text-align: center;
}

.social-media {
flex-basis: auto;
}

#about img {
    width:75vw;
}

#title {
   padding-top: 50px;
}


}

/* media queries for screens 650px and down */

@media screen and (max-width:650px)
{
    .attractions-outer  {
        display:grid;
        grid-template-columns:90vw;
        grid-template-rows: auto;
        justify-content: center;
    }

    .attractions-outer img{
        width:90vw;
        height: auto;
        justify-self: center;
    }
}

/* media queries for screens 450px and down */
@media screen and (max-width:450px)
{

#menu {
     font-size: 100%;
}
    #about {    
    margin: 10px 5px 0 5px;
    padding:0;
   
}

#menu li {
    margin-right: 10px;
    font-size: 14px;
}
#welcome{
    font-size: 100%;
}

#left-about, #right-about, .attractions-outer p {
    padding: 5px;
    font-size: 100%;
}
#events >h2 {
    margin-top: 30px;
    font-size:160%;
   
}

#right-about>h2 {
    font-size:160%;
    margin: 20px 0;
}

#event-1-outer, #event-2-outer,#event-3-outer,#event-4-outer {
    width:75vw;
    height:75vw;
}

.contact-form {
    width: 250pxh;

}
#hero-outer {
    height:400px;
}

#right-about p {
    padding:5px;
    line-height:30px;
}

}

